[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Maze generator and solver with DFS and Hunt&Kill algorithms"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Irek Iunusov (iiunusov)"},
    {name = "Tatiana Vinogradova (tvinogra)"},
]

[tool.setuptools.packages.find]
include = ["mazegen", "mazegen.*"]